# rules_black

./: .bazelrc  404.html  MODULE.bazel  README.md  WORKSPACE.bazel  index.html  print.html  searchindex.js  searchindex.json  version.bzl
.github/: release_notes.template
.github/workflows/: ci.yaml  compile-requirements.yaml  release.yaml
docs/: BUILD.bazel  book.toml
python/black/: defs.bzl  repositories.bzl
python/black/private/: black.bzl  black_fixer.py  black_runner.py
python/black/private/tests/: BUILD.bazel  test_requirements.in  test_requirements_linux.txt  test_requirements_macos.txt  test_requirements_windows.txt
python/black/private/tests/repo_version/: version_test.py
